# llm-expose

./: .gitignore  AUTHORS  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  test_system_prompt.txt
.github/prompts/: plan-liteLlmMcpToolSupport.prompt.md
.github/workflows/: docs.yml  publish.yml  test.yml
docs/: contributing.md  index.md
docs/api/: clients-base.md  clients-discord.md  clients-telegram.md  config.md  core.md  mcp-runtime.md  orchestrator.md  providers.md  tools.md
docs/architecture/: system-overview.md
docs/getting-started/: installation.md  overview.md  quick-start.md
docs/guides/: channel-configuration.md  channels-and-pairing.md  deployment.md  examples.md  faq.md  mcp-integration.md  provider-configuration.md  troubleshooting.md
docs/overrides/: main.html
docs/stylesheets/: custom.css
llm_expose/: __init__.py
llm_expose/cli/: __init__.py  main.py
llm_expose/clients/: __init__.py  base.py  discord.py  telegram.py
llm_expose/config/: __init__.py  loader.py  models.py
llm_expose/core/: __init__.py  builtin_mcp.py  content_parts.py  mcp_runtime.py  orchestrator.py  outbound_dispatch.py  tool_aware_completion.py
llm_expose/providers/: __init__.py  base.py  litellm_provider.py
llm_expose/tools/: __init__.py  base.py
scripts/: README.md  install-universal.sh  install-windows.ps1  install.sh
tests/: __init__.py  test_cli.py  test_clients.py  test_config.py  test_content_parts.py  test_mcp_runtime.py  test_providers.py
